fix: few routes
