# src/routes/index.ts
@@ -6,6 +6,8 @@ import swaggerFile from 'src/swagger/swagger_output.json';
 import rooms_routes from 'src/api/rooms/rooms.routes';
 import hotels_routes from 'src/api/hotels/hotels.routes';
 import bookings_routes from 'src/api/bookings/bookings.routes';
+import cities_routes from 'src/api/cities/cities.routes';
+import roomTypes_routes from 'src/api/roomTypes/roomTypes.routes';
 
 const app = express();
 app.use(express.json());
@@ -35,6 +37,17 @@ app.use(
 	'/api/bookings',
 	// #swagger.tags = ['Bookings']
 	bookings_routes
+);
+
+app.use(
+	'/api/cities',
+	// #swagger.tags = ['Cities']
+	cities_routes
+);
+app.use(
+	'/api/roomTypes',
+	// #swagger.tags = ['RoomTypes']
+	roomTypes_routes
 );
 
 export default app;
